--- a/Android/imagerecog/app/src/main/AndroidManifest.xml
+++ b/Android/imagerecog/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.imagerecog">
+    package="com.example.imagerecog" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,9 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Imagerecog">
-        <activity android:name=".Activity2"></activity>
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Imagerecog" >
+<!--        <activity android:name=".MainActivity3" >-->
+<!--        </activity>-->
+        <activity android:name=".MainActivity2" />
+        <activity android:name=".Activity2" />
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,5 +23,10 @@
             </intent-filter>
         </activity>
     </application>
+    <queries>
+        <intent>
+            <action android:name="com.google.android.youtube.api.service.START" />
+        </intent>
+    </queries>
 
 </manifest>
