--- a/Android/imagerecog/app/src/main/AndroidManifest.xml
+++ b/Android/imagerecog/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.imagerecog" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
