--- a/Android/imagerecog/app/src/main/AndroidManifest.xml
+++ b/Android/imagerecog/app/src/main/AndroidManifest.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.imagerecog" >
+    package="com.example.imagerecog">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <queries>
+        <intent>
+            <action android:name="com.google.android.youtube.api.service.START" />
+        </intent>
+    </queries>
+
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Imagerecog" >
-<!--        <activity android:name=".MainActivity3" >-->
-<!--        </activity>-->
+        android:theme="@style/Theme.Imagerecog"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".MainActivity3"></activity>
+        <!-- <activity android:name=".MainActivity3" > -->
+        <!-- </activity> -->
         <activity android:name=".MainActivity2" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +32,5 @@
             </intent-filter>
         </activity>
     </application>
-    <queries>
-        <intent>
-            <action android:name="com.google.android.youtube.api.service.START" />
-        </intent>
-    </queries>
 
 </manifest>
